added logic for make OrderSummaryActivity work with RecyclerVIewDrinkAdapter added Views (Button TextView EditText) for pay with credit card, added pop up for error and correctness added some TODO for keep track of things to do

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:theme="@style/Theme.DrinkProject"
         tools:targetApi="31">
         <activity
-            android:name=".OrderSummaryActivity"
+            android:name=".activities.OrderSummaryActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".activities.RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".activities.DrinkActivity"
