--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-text:1.9'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'org.postgresql:postgresql:42.2.5'
     implementation "androidx.biometric:biometric:1.1.0"
